Move JMH configuration to root project.