@@ -10,11 +10,6 @@ dependencies {
     jmh("org.bouncycastle:bcprov-jdk18on:1.72")
 }
 
-jmh {
-    jmhVersion.set("1.36")
-    jvmArgs.set( listOf("--add-exports","java.base/jdk.internal.vm=ALL-UNNAMED","--enable-preview") )
-}
-
 tasks.withType<Test>().configureEach {
     useJUnitPlatform()
 }
