@@ -9,11 +9,6 @@ dependencies {
     jmhImplementation("com.opencsv:opencsv:5.7.1")
 }
 
-jmh {
-    jmhVersion.set("1.36")
-    jvmArgs.set( listOf("--add-exports","java.base/jdk.internal.vm=ALL-UNNAMED","--enable-preview") )
-}
-
 tasks.withType<Test>().configureEach {
     useJUnitPlatform()
 }
