@@ -9,10 +9,6 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
 }
 
-jmh {
-    jvmArgs.set( listOf("--add-exports","java.base/jdk.internal.vm=ALL-UNNAMED","--enable-preview") )
-}
-
 tasks.withType<Test>().configureEach {
     useJUnitPlatform()
 }
